force-app/main/default/objects/StateBuilding__c/StateBuilding__c.object-meta.xml
<CustomObject>
    <label>StateBuilding</label>
    <pluralLabel>StateBuildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>StateBuilding Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>