force-app/main/default/objects/StateBuilding__c/fields/Construction_time_left__c.field-meta.xml
<CustomField>
    <fullName>Construction_time_left__c</fullName>
    <label>Construction time left</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>