force-app/main/default/objects/StateBuilding__c/fields/Days_without_input__c.field-meta.xml
<CustomField>
    <fullName>Days_without_input__c</fullName>
    <label>Days without input</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>