force-app/main/default/objects/StateBuilding__c/fields/Injected_money__c.field-meta.xml
<CustomField>
    <fullName>Injected_money__c</fullName>
    <label>Injected money</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>