force-app/main/default/objects/StateBuilding__c/fields/Last_investment__c.field-meta.xml
<CustomField>
    <fullName>Last_investment__c</fullName>
    <label>Last investment</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>