force-app/main/default/objects/StateBuilding__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>