force-app/main/default/objects/StateBuilding__c/fields/Pops_paychecks__c.field-meta.xml
<CustomField>
    <fullName>Pops_paychecks__c</fullName>
    <label>Pops paychecks</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>