force-app/main/default/objects/StateBuilding__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>