force-app/main/default/objects/StateBuilding__c/fields/Produces__c.field-meta.xml
<CustomField>
    <fullName>Produces__c</fullName>
    <label>Produces</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>