force-app/main/default/objects/StateBuilding__c/fields/Profit_history_current__c.field-meta.xml
<CustomField>
    <fullName>Profit_history_current__c</fullName>
    <label>Profit history current</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>