force-app/main/default/objects/StateBuilding__c/fields/Profit_history_days__c.field-meta.xml
<CustomField>
    <fullName>Profit_history_days__c</fullName>
    <label>Profit history days</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>