force-app/main/default/objects/StateBuilding__c/fields/Profit_history_entry__c.field-meta.xml
<CustomField>
    <fullName>Profit_history_entry__c</fullName>
    <label>Profit history entry</label>
    <type>Lookup</type>
    <referenceTo>Profit_history_entry__c</referenceTo>
    <relationshipName>StateBuilding_Profit_history_entry</relationshipName>
</CustomField>