force-app/main/default/objects/StateBuilding__c/fields/Stockpile__c.field-meta.xml
<CustomField>
    <fullName>Stockpile__c</fullName>
    <label>Stockpile</label>
    <type>Lookup</type>
    <referenceTo>Stockpile__c</referenceTo>
    <relationshipName>StateBuilding_Stockpile</relationshipName>
</CustomField>