force-app/main/default/objects/StateBuilding__c/fields/Subsidised__c.field-meta.xml
<CustomField>
    <fullName>Subsidised__c</fullName>
    <label>Subsidised</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>