force-app/main/default/objects/StateBuilding__c/fields/Unprofitable_days__c.field-meta.xml
<CustomField>
    <fullName>Unprofitable_days__c</fullName>
    <label>Unprofitable days</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>